# jio

./: .gitignore  CMakeLists.txt  LICENCE.md
include/jio/: iobase.h  iocfg.h  iocsv.h  ioerr.h  ioxml.h
source/: internal.c  internal.h  iobase.c  iocfg.c  iocsv.c  ioerr.c  ioxml.c
source/tests/: CMakeLists.txt  test_common.h
source/tests/base/: full_lines.txt  line_counting.c  with_spaces.txt
source/tests/cfg/: simple.ini  simple_cfg.c
source/tests/csv/: edit_csv_test.c  simple_csv_test.c  ugly_csv_test.c
